# indian_address_parser

./: .~lock.csv 3rd output given data ICL Data for Evaluation.csv#  .~lock.keywords_file.csv#  2nd output given data ICL Data for Evaluation.csv  LICENSE.md  README.md  Untitled.ipynb  all_data_output.csv  aoutput.csv  csv 3rd output given data ICL Data for Evaluation.csv  given data ICL Data for Evaluation.csv  keywords_file.csv  keywords_file.ods  main.py  new_all_data.csv  one.py  output given data ICL Data for Evaluation.csv  output.csv  pandas 3rd output given data ICL Data for Evaluation.csv  pyproject.toml  states.csv
indian_address_parser/: __init__.py
