[tool.poetry]
name = "indian-address-parser"
version = "0.1.2"
description = "I Created this library to parse indian address as accurate as possible and this library is opensource so you can contribute to it also."
authors = ["Shrikant Dhayje <shrikantdhayaje@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "indian_address_parser"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
